sumo/tests/traci/Scenario/DomainVehicle/InvalidObjectID/testclient_out.traci
TraCITestClient output file. Date: Tue Feb 03 22:53:08 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=0 y=491.75
.. Received Response <MoveNode>:
  nodeId=1 targetTime=1 2D-Position: x=2991.95 y=1008.25

-> Command sent: <Scenario>:
  flag=0 domain=1 domainId=-1 variable=13 valueDataType=0 [no value sent]
.. Answered with error to command (115), [description: Unable to retrieve node with given ID]

-> Command sent: <SimulationStep>:
  TargetTime=2 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=2 2D-Position: x=0.51826 y=491.75
.. Received Response <MoveNode>:
  nodeId=1 targetTime=2 2D-Position: x=2991.5 y=1008.25

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
